KC-6644 #comment Implemented GET Shop API with validations
